# QGIS-CadastralAutomation

./: .gitignore  CHANGELOG.md  LICENSE  ORTHOGONALIZATION_GUIDE.md  PLUGIN_INSTALLATION.md  PLUGIN_SUMMARY.md  PROGRESS_FEEDBACK.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  WORKFLOW.md  cadastral_generator.py  install_plugin.bat  pyproject.toml  requirements.txt  test_cadastral_generator.py
Example Project File/: Example.qgz
cadastral_automation/: README.md  __init__.py  cadastral_automation.py  cadastral_automation_dialog.py  cadastral_automation_dialog.ui  metadata.txt  resources.qrc
